@@ -19,6 +19,7 @@ import org.testng.annotations.Parameters;
 
 import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URL;
 import java.time.Duration;
 
 public class BaseTest {
@@ -44,7 +45,8 @@ public class BaseTest {
        // ChromeOptions options = new ChromeOptions();
        // options.addArguments("--remote-allow-origins=*");
         //driver = new ChromeDriver(options);
-        driver=pickBrowser(System.getProperty("browser"));
+       String browser = System.getProperty("browser","chrome");
+        driver=pickBrowser("browser");
         driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
         driver.manage().window().maximize();
         wait = new WebDriverWait(driver,Duration.ofSeconds(10));
@@ -57,7 +59,10 @@ public class BaseTest {
     }
     @AfterMethod
     public void closeBrowser (){
-        driver.quit();
+        if (driver != null) {
+            driver.quit();
+        }
+
     }
 
     public static WebDriver pickBrowser (String browser) throws MalformedURLException {
@@ -66,29 +71,30 @@ public class BaseTest {
         switch (browser){
             case "firefox":
                 WebDriverManager.firefoxdriver().setup();
-                return driver= new FirefoxDriver();
+                return new FirefoxDriver();
             case "MicrosoftEdge":
                 WebDriverManager.edgedriver().setup();
                 EdgeOptions edgeOptions = new EdgeOptions();
                 edgeOptions.addArguments("--remote-allow-origins=*");
-                return driver = new EdgeDriver();
+                return new EdgeDriver(edgeOptions);
 
            // Grid cases
             case "grid-edge":
                 caps.setCapability("browserName","MicrosoftEdge");
-                return driver = new RemoteWebDriver(URI.create(gridURL).toURL(), caps);
+                return  new RemoteWebDriver(new URL(gridURL), caps);
             case "grid-firefox":
                 caps.setCapability("browserName","firefox");
-                return driver = new RemoteWebDriver(URI.create(gridURL).toURL(), caps);
+                return new RemoteWebDriver(new URL(gridURL), caps);
             case "grid-chrome" :
                 caps.setCapability("browserName","chrome");
-                return driver = new RemoteWebDriver(URI.create(gridURL).toURL(), caps);
+                return new RemoteWebDriver(new URL(gridURL), caps);
               
             default:
                 WebDriverManager.chromedriver().setup();
                 ChromeOptions chromeOptions = new ChromeOptions();
-                chromeOptions.addArguments("--remote-allow-origins=*");
-                return driver = new ChromeDriver();
+                chromeOptions.addArguments("--remote-allow-origins=*" , "--incognito","--start -maximized") ;
+                chromeOptions.setExperimentalOption("excludeSwitches",new String[]{"enable-automation"});
+                return  new ChromeDriver(chromeOptions);
 
         }
     }
